--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ h1 {
     font-size: 56px;
     font-weight: 300;
     color: white;
-    margin: 0;
+    margin: 0 0 13px;
 }
 
 h2 {
